--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,7 +11,7 @@
 
 @media (max-width: 768px) {
   html {
-    font-size: 12px;
+    font-size: 87.5%;
   }
   .wrapper {
     grid-template-columns: 1fr;
